# autocompleter

./: .dockerignore  .env.backend.dev.example  .env.backend.prod.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  analyze_ax_fixtures.py  analyze_ax_trees.py  analyze_fixture.py  ax_fixture_failure_analysis.txt  benchmark_analysis.md  benchmark_models.py  benchmark_regeneration.py  diag_gemini_ax.py  diag_walk_up.py  dump_ax_tree.py  dump_ax_tree_json.py  dump_pipeline.py  evaluate_consolidation.py  evaluate_invocations.py  evaluate_memory.py  prompt_improvements.md  pyproject.toml  railway.json  render.yaml  replay_fixture.py  replay_invocation.py  requirements-dev.txt  requirements.txt  session_observations.md  test_streaming_diagnostic.py
autocompleter/: __init__.py  __main__.py  app.py  ax_utils.py  cdp_injector.py  config.py  consolidation.py  context_store.py  context_trail.py  conversation_extractors.py  debug_capture.py  embeddings.py  feedback.py  fixture_tools.py  help_overlay.py  hotkey.py  input_observer.py  latency_tracker.py  memory.py  overlay.py  prompts.py  quality_review.py  shell_parser.py  subtree_context.py  suggestion_engine.py  telemetry.py  text_injector.py  trigger_dump.py
backend/: Dockerfile  __init__.py  app.py  auth.py  config.py  debug_artifacts.py  proxy.py  store.py  telemetry.py
docs/: backend-beta.md  data-flows.md  fixture-workflow.md  friend-beta.md  supabase-environments.md
frontend/: .env.example  .gitignore  README.md  astro.config.mjs  env.d.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
macos-bootstrap/: .gitignore  Package.swift  README.md
(+200 files in other folders)
