[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocompleter"
version = "0.1.0"
description = "macOS contextual autocomplete powered by LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "instructor>=1.14.0",
]

[project.scripts]
autocompleter = "autocompleter.app:main"
autocompleter-beta-backend = "backend.app:main"

[project.optional-dependencies]
dev = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "uvicorn>=0.30.0",
]
backend = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["autocompleter", "backend"]
